# nunet-cuda-tuna

./: Cargo.toml  Dockerfile  Dockerfile.rust  build.sh  build_rust.sh  gpu_miner  run.py  run_cuda.py  run_rust.py  test_cores.py  to_host.sh
src/: main.rs
