[package]
name = "rminer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
sha2 = "0.10.6"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex-string = "0.1.0"
structopt = "0.3.26"
